# bullfinch

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.zig  flake.nix  justfile  prek.toml  rust-toolchain.toml
.agents/skills/os-reference-search/: SKILL.md
.agents/skills/os-source-search/: SKILL.md
.agents/skills/pdf-search/: SKILL.md
.cargo/: config.toml
.claude/rules/: testing.md  zig-patterns.md
.claude/skills/os-reference-search/: SKILL.md
.codex/skills/os-reference-search/: SKILL.md
.github/workflows/: ci.yml
docs/: code-style.md  commits.md  decisions.md  hardware.md  plan.md  references.md  testing.md
infra/: build.zig  config.json  config.zig  smoke.zig
rust/kernel/: Cargo.toml
rust/kernel/src/: boot.rs  lib.rs  limits.rs  main.rs
src/kernel/: c_compat.zig  hal.zig  kernel.zig  limits.zig  main.zig  root_test.zig  test.zig  test_board.zig  trap_common.zig
src/kernel/alloc/: alloc.zig  pool.zig
src/kernel/allocator/: allocator.zig  kmalloc.zig  slab.zig
src/kernel/boot/: init.zig  log.zig
src/kernel/clock/: clock.zig
src/kernel/common/: common.zig  mmu.zig  trap.zig
src/kernel/console/: console.zig
src/kernel/debug/: debug.zig  trace.zig
src/kernel/fdt/: fdt.zig  libfdt_env.h
src/kernel/hal/: context.zig  cpu.zig  entropy.zig  fpu.zig  hal.zig  interrupt.zig  timer.zig  trap_frame.zig
src/kernel/hwinfo/: hwinfo.zig
src/kernel/lib/: lib.zig  list.zig
src/kernel/memory/: memory.zig
src/shared/: test_markers.zig
tests/: config.json  smoke.zig
tools/xtask/: Cargo.toml
(+117 files in other folders)
