[workspace]
resolver = "3"
members = [
    "rust/kernel",
    "tools/xtask",
]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
allow_attributes_without_reason = "deny"
undocumented_unsafe_blocks = "deny"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
